# FaceID

./: CMakeLists.txt  README.md  main.cpp
faceModels/: 240315.yml
includes/: errorHandler.hpp  faceRecognition.hpp  functions.hpp  ocvManager.hpp
